# blosc2_openhtj2k

./: .gitignore  .gitmodules  ANNOUNCE.rst  CMakeLists.txt  README-DEVELOPERS.md  README.md  RELEASE_NOTES.md  RELEASING.rst  pyproject.toml  requirements-build.txt  requirements-test.txt  requirements.txt  setup.py  test.py
.github/workflows/: cibuildwheels.yml
blosc2_openhtj2k/: __init__.py
examples/: compress.py  decompress.py  test.py
src/: CMakeLists.txt  README.md  blosc2_htj2k.cpp  blosc2_htj2k.h  blosc2_htj2k_public.h  test_j2k.c  utils.cpp  utils.h
