# Blosc - Blocked Shuffling and Compression Library
#
# Copyright (C) 2021  The Blosc Developers <blosc@blosc.org>
# https://blosc.org
# License: BSD 3-Clause (see LICENSE.txt)
#
# See LICENSE.txt for details about copyright and rights to use.

[build-system]
requires = ["scikit-build-core", "blosc2"]
build-backend = "scikit_build_core.build"

[project]
name = "blosc2_openhtj2k"
version = "0.1.0"
description = "Plugin of the OpenHTJ2K codec for the C-Blosc2 library"
authors = [{name = "Blosc Development Team", email = "blosc@blosc.org"}]
maintainers = [{ name = "Blosc Development Team", email = "blosc@blosc.org"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
keywords = ["plugin", "blosc2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: C++"
]
dependencies = [
    "blosc2"
]

[tool.setuptools]
platforms = [ "any" ]
zip-safe = false

[tool.scikit-build]
# This activates verbose builds
cmake.verbose = true
# This controls the CMake build type
cmake.build-type = "Release"
# The licence file(s) to include in the wheel metadata directory.
wheel.license-files = ["LICEN[CS]E*", "COPYING*", "NOTICE*", "AUTHORS*"]

[tool.cibuildwheel]
build-verbosity = "1"
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"
